fix title on small screen

--- a/src/ui/scss/component/_channel.scss
+++ b/src/ui/scss/component/_channel.scss
@@ -89,7 +89,7 @@ $metadata-z-index: 1;
   overflow: hidden;
   text-overflow: ellipsis;
   // line-height: var(--font-heading);
-  font-size: var(--font-heading);
+  font-size: xx-large;
   font-weight: 800;
 
   // Quick hack to get this to work
